refactor: 필요없는 엔티티 삭제 및 WhiteList에 새로 url 엔드포인트 추가